[workspace]
members = [
    "arcus-g3-core",
    "arcus-g3-proxy", 
    "arcus-g3-security",
    "arcus-g3-metrics",
    "arcus-g3-config",
    "arcus-g3-cli"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Arcus-G3 Team <team@arcus-g3.local>"]
license = "Apache-2.0"
repository = "https://github.com/arcus-g3/swg"
homepage = "https://github.com/arcus-g3/swg"
documentation = "https://docs.rs/arcus-g3"
description = "Multi-Tenant, High-Performance, Cloud-Based Secure Web Gateway using G3 Project"
keywords = ["proxy", "gateway", "security", "multi-tenant", "g3"]
categories = ["network-programming", "web-programming"]
rust-version = "1.89"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# HTTP/Network
hyper = { version = "1.7", features = ["full"] }
hyper-util = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = "0.23"
rustls-native-certs = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.28"

# Configuration
clap = { version = "4.5", features = ["derive"] }
config = "0.14"

# Database/Storage
sled = "0.34"
redis = "0.26"

# Security/Crypto
ring = "0.17"
webpki = "0.22"
x509-parser = "0.16"

# Monitoring
prometheus = "0.14"
opentelemetry = "0.27"
opentelemetry-jaeger = "0.26"

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1.11"
url = "2.5"
base64 = "0.22"

# G3 Project dependencies (to be added when integrating)
# g3-daemon = { path = "../g3/lib/g3-daemon" }
# g3-types = { path = "../g3/lib/g3-types" }
# g3-runtime = { path = "../g3/lib/g3-runtime" }
# g3-resolver = { path = "../g3/lib/g3-resolver" }
# g3-socket = { path = "../g3/lib/g3-socket" }
# g3-socks = { path = "../g3/lib/g3-socks" }
# g3-http = { path = "../g3/lib/g3-http" }
# g3-icap-client = { path = "../g3/lib/g3-icap-client" }
# g3-openssl = { path = "../g3/lib/g3-openssl" }
# g3-tls-cert = { path = "../g3/lib/g3-tls-cert" }
# g3-statsd-client = { path = "../g3/lib/g3-statsd-client" }

[profile.dev]
debug = true
incremental = true

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.bench]
inherits = "release"
debug = true