[package]
name = "g3bench"
version = "0.9.0"
license.workspace = true
edition.workspace = true
rust-version = "1.75.0"
description = "G3 Benchmark Tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
indicatif = "0.17"
tokio = { workspace = true, features = ["rt", "net", "macros"] }
http.workspace = true
url.workspace = true
h2.workspace = true
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
quinn = { workspace = true, optional = true, features = ["tls-rustls", "runtime-tokio"] }
bytes.workspace = true
futures-util.workspace = true
atomic-waker.workspace = true
openssl.workspace = true
openssl-probe = { workspace = true, optional = true }
rustls.workspace = true
rustls-pemfile.workspace = true
tokio-rustls.workspace = true
hdrhistogram.workspace = true
ahash.workspace = true
rustc-hash.workspace = true
concurrent-queue = "2.2"
hex.workspace = true
itoa.workspace = true
governor = { workspace = true, features = ["std", "jitter"] }
hickory-client = { workspace = true, optional = true, features = ["dns-over-rustls", "dns-over-https-rustls", "native-certs"] }
hickory-proto = { workspace = true, optional = true }
g3-runtime.workspace = true
g3-signal.workspace = true
g3-types = { workspace = true, features = ["openssl", "rustls"] }
g3-clap.workspace = true
g3-socket.workspace = true
g3-http.workspace = true
g3-socks.workspace = true
g3-io-ext.workspace = true
g3-statsd-client.workspace = true
g3-histogram.workspace = true
g3-tls-cert.workspace = true
g3-openssl.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
default = ["hickory", "quic"]
hickory = ["dep:hickory-client", "dep:hickory-proto"]
quic = ["g3-types/quic", "g3-socks/quic", "g3-io-ext/quic", "dep:quinn", "dep:h3", "dep:h3-quinn", "hickory-client?/dns-over-quic", "hickory-proto?/dns-over-h3"]
vendored-openssl = ["openssl/vendored", "openssl-probe"]
vendored-tongsuo = ["openssl/tongsuo", "openssl-probe", "g3-types/tongsuo"]
vendored-aws-lc = ["openssl/aws-lc", "openssl-probe", "g3-types/aws-lc", "g3-tls-cert/aws-lc", "g3-openssl/aws-lc"]
vendored-boringssl = ["openssl/boringssl", "openssl-probe", "g3-types/boringssl", "g3-tls-cert/boringssl", "g3-openssl/boringssl"]
openssl-async-job = ["g3-openssl/async-job", "g3-runtime/openssl-async-job"]
