[package]
name = "g3bench"
version = "0.9.3"
license.workspace = true
edition.workspace = true
rust-version = "1.80.0"
description = "G3 Benchmark Tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
indicatif = "0.17"
tokio = { workspace = true, features = ["rt", "net", "macros", "signal"] }
http.workspace = true
url.workspace = true
h2.workspace = true
h3 = { workspace = true, optional = true }
h3-quinn = { workspace = true, optional = true }
quinn = { workspace = true, optional = true, features = ["rustls"] }
bytes.workspace = true
futures-util.workspace = true
atomic-waker.workspace = true
openssl.workspace = true
openssl-probe = { workspace = true, optional = true }
rustls.workspace = true
rustls-pki-types = { workspace = true, features = ["std"] }
tokio-rustls.workspace = true
hdrhistogram.workspace = true
ahash.workspace = true
rustc-hash.workspace = true
concurrent-queue = "2.5"
hex.workspace = true
itoa.workspace = true
governor = { workspace = true, features = ["std", "jitter"] }
hickory-client.workspace = true
hickory-proto.workspace = true
g3-runtime.workspace = true
g3-types = { workspace = true, features = ["openssl", "rustls"] }
g3-clap.workspace = true
g3-socket.workspace = true
g3-http.workspace = true
g3-socks.workspace = true
g3-io-ext = { workspace = true, features = ["openssl", "rustls"] }
g3-statsd-client.workspace = true
g3-histogram.workspace = true
g3-tls-cert.workspace = true
g3-openssl.workspace = true
g3-hickory-client.workspace = true

[build-dependencies]
g3-build-env.workspace = true

[features]
default = ["quic", "rustls-ring"]
quic = ["g3-types/quic", "g3-socks/quic", "g3-io-ext/quic", "g3-hickory-client/quic", "dep:quinn", "dep:h3", "dep:h3-quinn"]
rustls-ring = ["rustls/ring", "quinn?/rustls-ring"]
rustls-aws-lc = ["rustls/aws-lc-rs", "quinn?/rustls-aws-lc-rs"]
vendored-openssl = ["openssl/vendored", "openssl-probe"]
vendored-tongsuo = ["openssl/tongsuo", "openssl-probe", "g3-types/tongsuo"]
vendored-aws-lc = ["rustls-aws-lc", "openssl/aws-lc", "openssl-probe", "g3-types/aws-lc", "g3-tls-cert/aws-lc", "g3-openssl/aws-lc"]
vendored-boringssl = ["openssl/boringssl", "openssl-probe", "g3-types/boringssl", "g3-tls-cert/boringssl", "g3-openssl/boringssl"]
openssl-async-job = ["g3-openssl/async-job", "g3-runtime/openssl-async-job"]
