[package]
name = "g3fcgen"
version = "0.5.0"
license.workspace = true
edition.workspace = true
rust-version = "1.65.0"
description = "G3 fake certificate generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
log = { workspace = true, features = ["max_level_trace", "release_max_level_info"] }
rmpv.workspace = true
memchr.workspace = true
openssl.workspace = true
openssl-probe = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "net", "io-util"] }
flume = { workspace = true, features = ["async"] }
g3-types.workspace = true
g3-runtime.workspace = true
g3-msgpack.workspace = true
g3-daemon.workspace = true
g3-tls-cert.workspace = true
g3-compat.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
default = []
vendored-openssl = ["openssl/vendored", "dep:openssl-probe"]
