[package]
name = "g3fcgen"
version = "0.6.3"
license.workspace = true
edition.workspace = true
rust-version = "1.74.0"
description = "G3 fake certificate generator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
log = { workspace = true, features = ["max_level_trace", "release_max_level_info"] }
rmpv.workspace = true
memchr.workspace = true
openssl.workspace = true
openssl-probe = { workspace = true, optional = true }
tokio = { workspace = true, features = ["macros", "net", "io-util", "time"] }
flume = { workspace = true, features = ["async"] }
yaml-rust.workspace = true
g3-types.workspace = true
g3-runtime.workspace = true
g3-msgpack.workspace = true
g3-yaml = { workspace = true, features = ["histogram", "openssl"] }
g3-daemon.workspace = true
g3-statsd-client.workspace = true
g3-histogram.workspace = true
g3-tls-cert.workspace = true
g3-compat.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
default = []
vendored-openssl = ["openssl/vendored", "openssl-probe"]
vendored-tongsuo = ["openssl/tongsuo", "openssl-probe"]
vendored-aws-lc = ["openssl/aws-lc", "openssl-probe", "g3-types/aws-lc", "g3-tls-cert/aws-lc"]
vendored-boringssl = ["openssl/boringssl", "openssl-probe", "g3-types/boringssl", "g3-tls-cert/boringssl"]
