[package]
name = "g3iploc"
version = "0.3.0"
license.workspace = true
edition.workspace = true
rust-version = "1.86.0"
description = "G3 IP locate service"

[dependencies]
anyhow.workspace = true
clap.workspace = true
log = { workspace = true, features = ["max_level_trace", "release_max_level_debug"] }
tokio = { workspace = true, features = ["net", "io-util", "time", "signal", "macros"] }
yaml-rust.workspace = true
g3-yaml.workspace = true
g3-daemon.workspace = true
g3-statsd-client.workspace = true
g3-geoip-types.workspace = true
g3-geoip-db.workspace = true
g3-ip-locate.workspace = true
g3-socket.workspace = true
g3-types.workspace = true

[build-dependencies]
g3-build-env.workspace = true
