[package]
name = "g3mkcert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
openssl.workspace = true
g3-types = { path = "../lib/g3-types" }
g3-tls-cert = { path = "../lib/g3-tls-cert" }
