[package]
name = "g3mkcert"
version = "0.1.0"
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete.workspace = true
openssl.workspace = true
openssl-probe = { workspace = true, optional = true }
g3-types.workspace = true
g3-tls-cert.workspace = true

[build-dependencies]
rustc_version.workspace = true

[features]
default = []
vendored-openssl = ["openssl/vendored", "dep:openssl-probe"]
